# nendi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
cmd/nendi/: Cargo.toml  README.md
cmd/nendi/src/: main.rs
config/: default.toml  development.toml  production.toml  schema.toml  testing.toml
core/: Cargo.toml  README.md
core/src/: lib.rs
core/src/backpressure/: gate.rs  mod.rs  throttle.rs
core/src/daemon/: lifecycle.rs  mod.rs  runtime.rs
core/src/io/: backend.rs  epoll.rs  mod.rs  probe.rs  uring.rs
core/src/memory/: budget.rs  mod.rs
core/src/metrics/: mod.rs  registry.rs
core/src/offset/: manager.rs  mod.rs  registry.rs
core/src/pipeline/: batch.rs  coordinator.rs  flush.rs  ingestion.rs  mod.rs
core/src/storage/: mod.rs
core/src/storage/gc/: mod.rs  scheduler.rs  watermark.rs
core/src/storage/rocks/: compaction.rs  config.rs  filter.rs  mod.rs  tenant.rs
core/src/storage/wal/: batch.rs  mod.rs
docs/: guide.md
docs/architecture/: filtering.md  publication.md  sdk.md
docs/concept/: concept.md  issues.md  mitigations.md
http/: Cargo.toml  README.md
http/src/: lib.rs
http/src/egress/: mod.rs
http/src/egress/grpc/: backpressure.rs  mod.rs  replay.rs  server.rs  stream.rs
http/src/egress/webhook/: batcher.rs  circuit.rs  dispatcher.rs  dlq.rs  mod.rs  pool.rs  retry.rs
http/src/health/: endpoint.rs  mod.rs
proto/stream/: health.proto  service.proto  types.proto
scripts/: build.sh
sdk/rust/: Cargo.toml  README.md
sdk/rust-derive/: Cargo.toml
sdk/rust-derive/src/: lib.rs
sdk/rust/src/: lib.rs
sdk/rust/src/client/: builder.rs  config.rs  health.rs  mod.rs
sdk/rust/src/deserialize/: mod.rs  traits.rs
sdk/rust/src/error/: mod.rs  types.rs
sdk/rust/src/event/: change.rs  ddl.rs  mod.rs  op.rs  typed.rs
sdk/rust/src/offset/: file.rs  mod.rs  nendi.rs  store.rs  types.rs
sdk/rust/src/proto/: mod.rs
sdk/rust/src/retry/: mod.rs  policy.rs
sdk/rust/src/stream/: mod.rs  mux.rs  raw.rs  typed.rs
sdk/rust/src/subscription/: builder.rs  filter.rs  inspect.rs  mod.rs
sdk/rust/src/transpile/: ast.rs  cel_to_pg.rs  codegen.rs  error.rs  lexer.rs  mod.rs  proto_to_row.rs  semantic.rs
sdk/wasm/: Cargo.toml
sdk/wasm/example/: index.html
sdk/wasm/src/: client.rs  decode.rs  event.rs  lib.rs  transpile.rs
services/pgsql/: Cargo.toml  README.md
services/pgsql/src/: lib.rs
services/pgsql/src/connector/: client.rs  config.rs  mod.rs
services/pgsql/src/decoding/: fallback.rs  mod.rs  pgoutput.rs
services/pgsql/src/replication/: ack.rs  mod.rs  slot.rs  stream.rs  throttle.rs
services/pgsql/src/schema/: buffer.rs  fingerprint.rs  mod.rs  registry.rs
services/pgsql/src/slot/: manager.rs  mod.rs  policy.rs
services/pgsql/src/snapshot/: builder.rs  exporter.rs  mod.rs
services/pgsql/src/trigger/: mod.rs
services/pgsql/src/trigger/ddl/: handler.rs  parser.rs
services/pgsql/src/trigger/event/: handler.rs  types.rs
shared/: Cargo.toml  README.md
shared/src/: lib.rs
shared/src/config/: loader.rs  mod.rs
shared/src/error/: mod.rs  types.rs
shared/src/event/: envelope.rs  mod.rs  types.rs
shared/src/lsn/: mod.rs  types.rs
shared/src/metrics/: labels.rs  mod.rs
shared/src/queue/: ring.rs
shared/src/serialize/: mod.rs  proto.rs  rkyv.rs
shared/src/tenant/: mod.rs  types.rs
sql/pgsql/function/: capture.sql  emit.sql  fingerprint.sql
sql/pgsql/migration/: 001.sql  002.sql  003.sql
sql/pgsql/setup/: extensions.sql  roles.sql  slot.sql
sql/pgsql/teardown/: schema.sql  slot.sql
sql/pgsql/trigger/: ddl.sql  drop.sql  rename.sql
tests/: README.md
tests/bench/: Cargo.toml
tests/bench/src/: csv_report.rs  egress.rs  ingestion.rs  lib.rs  serialize.rs  storage.rs
tests/fixtures/config/: test.toml
tests/fixtures/pgsql/: ddl.sql  schema.sql  seed.sql
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs  sdk.rs
tests/integration/src/pgsql/: mod.rs  replication.rs  schema.rs  slot.rs
