[package]
name = "nendi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nendi-core = { path = "../../core" }
nendi-http = { path = "../../http" }
shared = { package = "nendi-shared", path = "../../shared" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
