[package]
name = "nendi-sdk"
version = "0.1.0"
edition = "2021"
description = "Official Rust client SDK for the Nendi change data capture daemon"
license = "Apache-2.0"
repository = "https://github.com/fescii/nendi"
keywords = ["cdc", "streaming", "postgres", "database", "realtime"]
categories = ["database", "asynchronous", "network-programming"]

[features]
# Full gRPC transport (tonic + tokio TCP sockets).
# Disable this when compiling for wasm32 targets.
default = ["grpc", "offset-file"]
grpc = [
  "dep:tonic",
  "dep:tokio",
  "dep:tokio-stream",
  "dep:futures",
  "dep:http",
  "dep:async-trait",
  "dep:prost-types",
]
offset-file = []
offset-redis = ["dep:redis"]

[dependencies]
# ─── gRPC (only when feature = "grpc") ───────────────────────────────────────
tonic = { workspace = true, features = ["transport"], optional = true }
prost-types = { version = "0.14", optional = true }
tokio = { workspace = true, features = ["sync", "time"], optional = true }
tokio-stream = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
http = { version = "1", optional = true }
async-trait = { workspace = true, optional = true }

# ─── Always available ─────────────────────────────────────────────────────────
prost = { workspace = true }

# Arena allocation (transpiler — pure logic, wasm-safe)
typed-arena = "2"

# Serialization
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Proc macro (derive support)
nendi-derive = { path = "../rust-derive", version = "0.1" }

# Error handling
thiserror = { workspace = true }

# Offset stores
redis = { version = "0.25", optional = true, features = ["tokio-comp"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = { workspace = true }
