[package]
name = "nendi-sdk-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for the Nendi CDC SDK (JS/TS, Python-wasm, etc.)"
license = "Apache-2.0"
repository = "https://github.com/fescii/nendi"

# cdylib = the .wasm file loaded by wasm-pack / bundlers
# rlib   = used when running unit tests with cargo-wasm
[lib]
crate-type = ["cdylib", "rlib"]
name = "nendi_sdk_wasm"

[features]
default = []

[dependencies]
# ─── Core SDK (pure-logic only — no tonic / tokio TCP sockets) ────────────────
nendi-sdk = { path = "../rust", version = "0.1", default-features = false }

# ─── wasm-bindgen ecosystem ──────────────────────────────────────────────────
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

# ─── web-sys features ─────────────────────────────────────────────────────────
web-sys = { version = "0.3", features = [
  "WebSocket",
  "MessageEvent",
  "Event",
  "ErrorEvent",
  "BinaryType",
  "CloseEvent",
  "console",
] }

# ─── Shared utilities ─────────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

# wasm-pack / wasm-opt settings
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-mutable-globals"]
