[package]
name = "nendi-pgsql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shared = { package = "nendi-shared", path = "../../shared" }

tokio.workspace = true
async-trait.workspace = true
tokio-postgres.workspace = true
postgres-protocol.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
dashmap.workspace = true
