[package]
name = "nendi-tests-integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
nendi-core = { path = "../../core" }
nendi-pgsql = { path = "../../services/pgsql" }
shared = { package = "nendi-shared", path = "../../shared" }
nendi-sdk = { path = "../../sdk/rust" }

tokio.workspace = true
async-trait.workspace = true
rocksdb.workspace = true
tonic.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tokio-postgres.workspace = true
bytes.workspace = true
futures = "0.3"
dotenvy = "0.15"
